[package]
name = "rocket-try"
version = "0.1.0"
authors = ["Tushar R. Gosavi <tushargosavi@gmail.com>"]
edition = "2018"


[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
#diesel_codegen = { version = "*", features = ["postgres"] }
dotenv = "0.10"
r2d2 = "0.8.4"
r2d2-diesel = "*"